fix notepad overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -365,7 +365,7 @@ html {
   font-weight: bold;
   text-shadow: 1px 1px 0 #000, 1px 1px 2px #000, 0 0 16px #000;
   background: rgba(0, 0, 0, 0.5);
-  color: #dd7;
+  color: #fac;
 }
 #change-wallpaper:hover {
   text-shadow: 1px 1px 0 #000, 1px 1px 5px #000, 0 0 26px #000;
